--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "svelte-check": "^4.3.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "@types/matter-js": "^0.20.2",
+    "matter-js": "^0.20.0"
   }
 }
